--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -288,8 +288,20 @@ The priors elicited cover a range of possible parameter values as intended (Figu
 We observe a correlation in our items between the mean \% of Americans who have \textsc{done action} before (Question 1) and the mean log-frequency  of action (Question 2) ($r_{1,2} = 0.74; r^2_{1,2} = 0.55$); our items that tend to be more popular actions also tend to be more frequent actions (e.g. \textsc{wears socks}) and visa-versa (e.g. \textsc{steals cars}), though there are notable exceptions (e.g. \textsc{plays the banjo} is not popular but done frequently when done at all, as is \textsc{smokes cigarettes}; \textsc{goes to the movies} is a popular activity though not done very often). 
 This diversity is relevant because the speaker model (Eq.~\ref{eq:S2}) will produce habitual sentences (e.g. \emph{Sam goes to the movies / goes to the ballet.}) contingent on the shape of the prior distribution. 
 
-From the inferred parameters and assumed functional forms, we get an inferred $P(x)$. We will use this inferred prior in our language model, as opposed to using the raw data directly, for two reasons: (1) To smooth effects that are clearly results of the response format\footnote{For example, a very common rating is \emph{1 time per year}. Presumably participants would be just as happy reporting \emph{approximately} 1 time per year; the raw data does not reflect this due to demands of the dependent measure.} 
-and (2) to better capture the tails of the prior distribution which have relatively little data and are regularized by the analysis model.
+From the inferred parameters and assumed functional forms, we get an inferred $P(x)$ modeled as a mixture of individuals with the possibility of carrying out the action and those without the possibility of doing it. 
+That is, $P(x)$ was constructed by sampling $x$ as follows:
+%That is, the posterior predictive of the prior data was constructed by forward-sampling the mixture component $\theta$ (determined by Q1: number of people who had done the action before, see Expt.~1 data analysis); if the sampled person was the kind of person to have done the action before, the frequency was sampled a likely frequency of action (determined by Q2); if they were not the type of person to have done the action, we assume they will never or only rarely do it. \ndg{never or rarely??}
+%\begin{minipage}{0.5 \textwidth} \small
+\begin{align}
+\theta & \sim \text{Beta}(\gamma_{1}, \xi_{1}) \nonumber \\ 
+\ln x & \sim \begin{cases}
+		\text{Gaussian}(\mu_{2}, \sigma_{2}) &\mbox{if } \text{Bernoulli}(\theta) = \textsc{t} \label{eq:priorModel}  \\
+				\delta_{x=-\infty} &\mbox{if } \text{Bernoulli}(\theta) = \textsc{f} \\
+		\end{cases}
+\end{align}
+%\end{minipage}
+In addition to specifying the correct way to combine our two prior-elicitation questions, using this inferred prior in our language model solves two difficulties: (1) It smooths effects that are clearly results of the response format\footnote{For example, a very common rating is \emph{1 time per year}. Presumably participants would be just as happy reporting \emph{approximately} 1 time per year; the raw data does not reflect this due to demands of the dependent measure.} 
+and (2) it better captures the tails of the prior distribution which have relatively little data and need to be regularized by the analysis model.
 %, which receive such low probability to require many more participants in order to sample accurately.
 
 Some items show substantial differences between the genders (e.g. \emph{wears a bra}) and some show subtle differences (e.g. \emph{watches professional football}). 
@@ -309,6 +321,9 @@ We will explore this possibility in Experiment 2, for select items with priors t
 
 \section{Experiment 2: Felicity judgments}
 
+We next explored the endorsements of habituals made from the items whose propensity priors were measured in Experiment 1. 
+\ndg{specifcy the grammar of the habitual constructions used more precisely (got / gets).. a singular noun (proper noun? person name?) combined with a present simple verb phrase??}
+
 \subsection{Method}
 
 \subsubsection{Participants}
@@ -322,16 +337,14 @@ The experiment took 4 minutes on average on participants were compensated \$0.55
 On each trial, participants were presented with a \emph{past frequency statement} for a given event or behavior of the form: ``In the past M \{weeks, months, years\}, \textsc{person} \textsc{event} 3 times''.
 For example, \emph{In the past month, Bill smoked cigarettes 3 times}.
 We kept constant the number of times the action was done (3) in order to isolate the effects of the time window. 
-The particular intervals used (number M and window \{weeks, months, years\}) were selected by examining the predictions of the speaker model (Eq.~\ref{eq:S2}) for each item independently, and aimed to yield a variety of predicted endorsement rates.
+The particular intervals used (number M and window \{weeks, months, years\}) were selected after examining the predictions of the speaker model (Eq.~\ref{eq:S2}), for each item independently, to yield a variety of predicted endorsement rates.
 The items were the same as in Expt. ~1.
-
-\ndg{it would be good to give and example sentence for each of the schematic materials here and in other methods sections. ie. "In the past 2 weeks, Bob got wasted 3 times." do you agree "Bob gets wasted."?
-also, specifcy the grammar more precisely (got / gets)..}
 
 Participants were asked whether they agreed or disagreed with the corresponding habitual sentence: ``\textsc{person event}'' (e.g. \emph{Bill smokes cigarettes}).
 Participants saw 25 out of the 31 items paired randomly with a male or female character name; the other 6 trials were presented with both male and female names (on separate trials; 37 trials total).  
-These 6 items were chosen because the priors for men and women varied substantially in Expt.~1 to explore whether or not the prior distribution in Eq.~\ref{eq:L1}, \ref{eq:L0} should be with respect to all people or to males and females separately (e.g. if there is a frequency at which a male would be judged to (habitually) \textsc{wear a bra} but a woman would not be judged to). 
-\ndg{unclear what we did with these six items. the way it's phrased makes it sound like we only collected data for these 6...}
+These 6 items were chosen because the priors for men and women varied substantially in Expt.~1; this will allow us to explore whether or not the prior distribution in Eq.~\ref{eq:L1}, \ref{eq:L0} should be with respect to all people or to males and females separately. 
+%(e.g. if there is a frequency at which a male would be judged to (habitually) \textsc{wear a bra} but a woman would not be judged to). 
+%\ndg{unclear what we did with these six items. the way it's phrased makes it sound like we only collected data for these 6...}
 The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habituals/experiments/truth-judgments/tj-2.html}.
 
 %The model predicts that some items would not exhibit variability in endorsements in given ranges (e.g. if a person stole a car 3 times in the past \emph{week} vs. \emph{month}); we omitted particular intervals when the model predicted non-meaningful differences in endorsements. 
@@ -341,43 +354,30 @@ The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habit
 \subsection{Behavioral results}
 
 On each trial of the experiment, the participant was told a person did a particular action 3 times during some time window. 
-Figure \ref{fig:tjScatters} (left) shows the correspondence between the time window given and the felicity of the corresponding habitual sentence. 
+Figure \ref{fig:tjScatters} (left) shows the correspondence between the frequency of the event and the felicity of the corresponding habitual sentence. 
 It is clear that a habitual sentence can receive strong agreement even when the actions are very infrequent (log frequency $<$ 2; time interval of years or longer; e.g. writing 3 novels, stealing 3 cars in a 5 year interval).
-We also see habitual sentences that participants are reluctant to endorse completely (e.g. wears socks, drinks coffee), even when they are relatively frequent in occurrence (spec.,. 3 times in a one month interval; log frequency $\sim$ 5).
-In our data, actions that completed with a high frequency rate (spec., 3 times in a one week interval; log frequency $\sim$ 6.5) receive at least 75\% endorsement, though there is still variability among them (e.g. smoking cigarettes, wearing socks are endorsed the least), suggesting that even actions that are completed almost everyday can insufficient to generalize.
+We also see habitual sentences that participants are reluctant to endorse completely (e.g. wears socks, drinks coffee), even when they are relatively frequent in occurrence (3 times in a one month interval; log frequency $\sim$ 5).
+In our data, actions that completed with a high frequency rate (3 times in a one week interval; log frequency $\sim$ 6.5) receive at least 75\% endorsement, though there is still variability among them (e.g. smoking cigarettes and wearing socks are endorsed the least). %, suggesting that even actions that are completed almost everyday can insufficient to generalize.
 Overall, frequency of action predicts only a fraction of the variability in responses ($r^2(93) = 0.33$).
 For actions that are done on the time scale of years or longer (lower median of frequency), frequency itself no longer explains the endorsements ($r^2(50) = 0.07$)
 
 We further examined the six items for which we observed gender differences in the prior elicitation task (Expt.~1).
 We observe no difference between endorsements of the habitual of characters with male and female names. 
 Overall, the mean endorsements by gender are heavily correlated $r(93) = 0.91$. \mht{compare with split half correlation?}
+\ndg{say something more about why this is? or save this for model comparison? what does model predict?}
 
-We observe that none of our items receive less than 25\% endorsement (i.e. only 75\% of participants disagree with the felicity of the utterance).
-This may be due to the fact that actor has done the action in the past a plurality of times; we would expect to get strong disagreement with the habitual when the person has never done the action, or perhaps done it only once.
+%We observe that none of our items receive less than 25\% endorsement (i.e. only 75\% of participants disagree with the felicity of the utterance).
+%This may be due to the fact that actor has done the action in the past a plurality of times; we would expect to get strong disagreement with the habitual when the person has never done the action, or perhaps done it only once.
 
 \subsection{Model fit and results}
 
-We used the pragmatic speaker model $S_2$ (Eq.~\ref{eq:S2}) with the posterior predictive of the prior data (Expt.~1) as $P(x)$  to predict felicity judgments in Expt.~2.
-We modeled $P(x)$ as a mixture of individuals with the possibility of carrying out the action and those without the possibility of doing it. 
-The posterior predictive of the prior data was constructed by forward-sampling the mixture component $\theta$ (determined by Q1: number of people who had done the action before, see Expt.~1 data analysis).
-If the sampled person was the kind of person to have done the action before, the frequency was sampled a likely frequency of action (determined by Q2). 
-If they were not the type of person to have done the action, we assume they will never or only rarely do it.
-Because we observe no difference between the felicity judgments for habituals of male and female characters, we use a 50\% mixture of the inferred priors for each gender to construct a single frequency across individuals.
-\begin{minipage}{0.5 \textwidth} \small
-\begin{align}
-\theta & \sim \text{Beta}(\gamma_{1}, \xi_{1}) \nonumber \\ 
-\ln x & \sim \begin{cases}
-		\text{Gaussian}(\mu_{2}, \sigma_{2}) &\mbox{if } \text{Bernoulli}(\theta) = \textsc{t} \label{eq:priorModel}  \\
-				\delta_{x=-\infty} &\mbox{if } \text{Bernoulli}(\theta) = \textsc{f} \\
-		\end{cases}
-\end{align}
-\end{minipage}
-
-Having fit the prior empirically, the model was one parameter -- the speaker optimality parameter in Eq.~\ref{eq:S1}. 
+We used the pragmatic speaker model $S_2$ (Eq.~\ref{eq:S2}) with the priors elicited above (Expt.~1) to predict felicity judgments in Expt.~2, assuming the target propensity (to be conveyed by $S_2$) is the provided frequency.
+\ndg{revise once we finalize treatment of gender: Because we observe no difference between the felicity judgments for habituals of male and female characters, we use a 50\% mixture of the inferred priors for each gender to construct a single frequency across individuals. }
+The model has one free parameter---the speaker optimality parameter, $\gamma$, in Eq.~\ref{eq:S1}. 
 %Additionally, we include a data analytic parameter to model random guessing behavior; this provides a rough measure of how much variance is unexplained by the pragmatics model. 
-We use Bayesian data analytic techniques to integrate over this parameter \cite{LW2014}, and compare the posterior predictive distribution of this model to the empirical data in Expt.~2.
-
-To attain credible values of the model parameters as well as the posterior predictive distribution over responses, we collected an MCMC chain of 50,000 iterations, discarding the first 25,000 iterations for burn in.
+We use Bayesian data analytic techniques to integrate over this parameter \cite{LW2014}, comparing the posterior predictive distribution to the empirical data in Expt.~2.
+%To attain credible values of the model parameters as well as 
+To construct the posterior predictive distribution over responses, we collected an MCMC chain of 50,000 iterations, discarding the first 25,000 iterations for burn in.
 The Maximum A-Posteriori (MAP) value and 95\% highest probability density (HPD) interval for the speaker optimality parameter in Eq.~\ref{eq:S1} is 5.7 [5.1,6.2].
 %The MAP and HPD interval for the data-analytic guessing parameter is 0.004 [0.0003, 0.03], suggesting that there is not a substantial amount of the data that is better explained by a model of random guessing than by our pragmatic speaker model.
 
