--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -521,28 +521,30 @@ These results suggest that the felicity of habituals is based on an underlying s
 \section{Discussion}
 
 We presented a computational model for communicating generalizations about events.
-The model decides if a habitual is a useful way to describe a person's behavior, taking into the listener's prior beliefs about the action --- how common it is and the likely frequency of action (measured in Expt.~1) --- and the basic conversational principles to be truthful and informative.
-We validate this model by eliciting felicity judgments for habitual sentences covering a wide range of activities with a wide range of experimentally manipulated frequencies of action (Expt.~2).
-We further investigate the nature of the underlying ``propensity'' scale by introducing enabling and disabling conditions, measuring the predicted future frequency of action (Expt.~4) and using that to predict the felicity of habitual sentences (Expt.~3). 
+The model decides if a habitual is a useful way to describe a person's behavior, taking into account the listener's prior beliefs about the action --- how common it is and the likely frequency (measured in Expt.~1) --- and the basic conversational principles to be truthful and informative.
+We validated this model by eliciting felicity judgments for habitual sentences covering a wide range of activities with a wide range of experimentally manipulated frequencies of action (Expt.~2).
+We further investigate the nature of the underlying ``propensity'' scale by introducing enabling and disabling evidence, measuring the predicted future frequency (Expt.~3a) and using that to predict the felicity of habitual sentences (Expt.~3b). 
+To our knowledge, the experiments presented here are first empirical investigations into the truth conditions of habitual sentences and the first test of a formal model of habitual sentences.
 
-To our knowledge, the experiments presented here are first empirical investigations into the truth conditions of habitual sentences.
-We use a formal theory of the semantics and pragmatics of habitual language in order to derive predictions about the felicity of habituals.
-We adopt as the underlying degree scale the \emph{propensity} with which a person does an action. 
-In Expts.~3 \& 4, we showed that the notion of propensity is tied to the future predictions. 
-Future predictions are important to communicate because the generalization is only useful if it helps predict future events. 
-It further suggests the underlying scale is a subjective one that integrates observed frequency with top-down biases from an intuitive theory.
 
-The model we present here is almost identical to a model we've used to describe generic language \cite{TesslerUnderReview}.
-This provides a formal bridge between generalizations of properties about categories (i.e. \emph{generics}) and generalizations about individuals or events (i.e. \emph{habituals}), a connection often noted in the linguistics literature \cite{Carlson1977, Carlson2005, Cohen1999}. 
-In the psychological literature, habituals have received relatively little attention as compared with \emph{generics}. 
+%We use a formal theory of the semantics and pragmatics of habitual language in order to derive predictions about the felicity of habituals.
+%We adopt as the underlying degree scale the \emph{propensity} with which a person does an action. 
+%In Expts.~3 \& 4, we showed that the notion of propensity is tied to the future predictions. 
+%Future predictions are important to communicate because the generalization is only useful if it helps predict future events. 
+%It further suggests the underlying scale is a subjective one that integrates observed frequency with top-down biases from an intuitive theory.
+
+The model we present here is almost identical to a model we have used to describe generic language \cite{TesslerUnderReview}.
+This provides a formal bridge between generalizations of properties about categories (i.e. \emph{generics}) and generalizations about individuals and events (i.e. \emph{habituals}), a connection often noted in the linguistics literature \cite{Carlson1977, Carlson2005, Cohen1999}. 
 Generics often use a bare plural (e.g. \emph{Bears like to eat ants.}) and don't lay claim to any well-defined set of individuals (e.g. many bears may not like to eat ants).
 Habituals use the simple present tense (e.g. \emph{John smokes}) without any well-defined period of time (e.g. John may go many days without smoking). 
 In both cases, we are able to explain the varying truth conditions of these kinds of sentences by using a pragmatically inferred threshold on the set of individuals or on the period of time, respectively. 
 Scales, and scalar representations, provide a simple and general quantitative way to express truth conditions.
+%In the psychological literature, habituals have received relatively little attention compared to \emph{generics}. 
 
 We use the domain of human behavior as it provides a well-defined domain of events with wide variability in frequency of action.
 We have preliminary evidence from Expt.~2 that the prior over which the intended meaning is derived $P(x)$ is with respect to individuals from both genders: Felicity judgments did not vary appreciably across the two genders, even when the $P_{gender}(x)$ did. 
 This begins to the address the question of the \emph{contrast class} with respect to which generic or habitual meaning is computed. 
+\ndg{this paragraph is weak... figure out what we want to say, or remove.}
 
 %Though we validate this model using the speaker component $S_2$ for the evaluation of the felicity of habitual sentences, this model naturally extends to capture \emph{comprehension} of habitual language using the listener $L_1$ component.
 
@@ -550,7 +552,9 @@ Habituals are used to convey generalizations about events.
 They convey \emph{\textsc{X} happens}.
 Knowing that an event generally happens may be a useful abstraction for causal inference \cite<e.g.>{Griffiths2005}. 
 In addition, habituals may be weaker forms of trait language \cite{Gelman1999} and may serve as the bridge between observations of particular instances in time and enduring, essentialist beliefs about people.
+\ndg{this paragraph should be revised to focus more on why habituals are important and how they fit into generalization and the mind more generally. mention traits only if this is relevant!}
 
+\ndg{note: in doing this revision it became clear to me that habituals are not about all kinds of event generalizations --- they are specifically about generalizing the tendency of an individual to be part of an event.... should make small adjustments to clarify this?}
 
 %\mht{kind of rough and needs more flowers}
 %
