--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -24,7 +24,7 @@
 \usepackage{amssymb}
 \usepackage{wrapfig}
 \usepackage{lipsum}
-
+\usepackage{bbm}
  \newcommand{\denote}[1]{\mbox{ $[\![ #1 ]\!]$}}
  
  \definecolor{Red}{RGB}{255,0,0}
@@ -139,7 +139,7 @@ We adopt this theory to explain habituals by adjusting the underlying degree to 
 In Expt.~1, we measure \emph{a priori} beliefs about how frequently people do a diverse set of actions.
 In Expt.~2, we use those priors and the pragmatic theory to make predictions about the truth conditions of habitual sentences under different frequencies of action. 
 
-\mht{is it possible to make this important for more than just our "theoretical framework"?}
+\mht{is it possible to relate this to language understanding more generally (not just our theoretical framework)? e.g., can we frame this as addressing ``Is language used to describe the objective state of the world or the speaker's subjective beliefs about the world?''}
 Habituals, unlike generics, make it possible to explore an important issue in this theoretical framework: is the underlying dimension the actual, or past frequency of the event (e.g.~how often Bill has actually smoked in the past month) or the predictive probability that this event will happen in the near future (e.g.~how likely it is that Bill will smoke in the next week)?
 In Expts.~3 \& 4, we use a similar method to show that the object of communication is a speaker's prediction about the future frequency of action, and not past frequency.
 This has important implications about the relationship between linguistic generalization and intuitive theories, which we explore briefly in the conclusion.
@@ -152,13 +152,13 @@ This has important implications about the relationship between linguistic genera
 A habitual sentence expresses a generalization about the tendency of an individual to participate in a kind of event\footnote{
 We articulate the formalization in terms of individuals, but the theory applies straightforwardly to events without actors (e.g \emph{It rains around here.}).
 }.
-For a given individual $I$ (e.g.~\textsc{Bill}) and an event or behavior $B$ (e.g.~\textsc{smoking}), we refer to the probability that individual $I$ will perform behavior $B$ in the next time window, that is $ P(B\mid I) = \int_{t} ** dt$, as the \emph{propensity} of $I$ doing $B$.
-\ndg{maybe it's better to talk about the underlying scale as a rate? what's up with the ** in the integral here?}
+For a given individual $I$ (e.g.~\textsc{Bill}) and an event or behavior $E$ (e.g.~\textsc{smoking}), we refer to the rate at which an individual $I$ participates in an event $E$ for a given time window $t$, that is $ \lambda_{t} = \int_{t} \mathbbm{1}_{I \in E}dt$, as the \emph{propensity} of $I$ doing $E$.
+%\ndg{maybe it's better to talk about the underlying scale as a rate? what's up with the ** in the integral here?}
 %
-A natural denotation for the habitual is a simple threshold on propensity $P(B\mid I)>\tau$ \cite<c.f.>{Cohen1999}, yet no fixed value for $\tau$ would lead to the observed flexibility of truth conditions (e.g. \emph{Bill smokes} vs. \emph{writes novels}).
+A natural denotation for the habitual is a simple threshold on propensity $\lambda_{t} > \tau$ \cite<c.f.>{Cohen1999}, yet no fixed value for $\tau$ would lead to the observed flexibility of truth conditions (e.g. \emph{Bill smokes} vs. \emph{writes novels}).
 Building on \citeA{Lassiter2013,Lassiter2015}, we posit that this threshold is not a fixed property of the language, but is established by pragmatic inference.
 
-We model a speaker $S_2$ who reasons about a pragmatic listener $L_1$; this listener is considering the propensity of a certain behavior for a certain individual, $x=P(B \mid I)$.
+We model a speaker $S_2$ who reasons about a pragmatic listener $L_1$; this listener is considering the propensity of a certain behavior for a certain individual, $\lambda$.
 The listener $L_1$ has uncertainty about the appropriate threshold for the habitual in this context, and reasons about what an informative speaker $S_1$ would be likely to say. The speaker $S_1$ in turn reasons about an idealized literal listener $L_0$, who has access to the threshold $\tau$ (i.e. $S_1$ believes $L_0$ will interpret him in exactly the way he means). 
 %$S_2$ ultimately decides whether to produce the habitual or stay silent (i.e.~produce a \emph{null} utterance that has no information content).
 %
@@ -166,19 +166,25 @@ The listener $L_1$ has uncertainty about the appropriate threshold for the habit
 %It is not clear at this point whether this frequency is a retrospective (how often has Bill smoked in the past) or a prospective frequency (how often to I expect Bill to smoke in the future); for the time being, we assume time is \emph{homogenous} with respect to past and present (i.e. however often Bill has smoked in the past will be how often he smokes in the future). 
 %This inference depends on event and person knowledge, but otherwise follows from a general mechanism of language.
 %We imagine a hypothetical, pragmatic listener ($L_1$) concerned with learning
-Writing the propensity as $x$, this leads to a set of equations:
+Writing the propensity as $\lambda$, this leads to a set of equations:
 \begin{eqnarray}
-P_{S_{2}}(u \mid x) & \propto &  \int_{\tau} P_{L_{1}}(x , \tau \mid u) \label{eq:S2}\\
-P_{L_{1}}(x , \tau \mid u) &\propto& P_{S_{1}}(u \mid x, \tau) \cdot P(x) \cdot P(\tau) \label{eq:L1}\\
-P_{S_{1}}(u \mid x, \tau) &\propto&  {P_{L_{0}}(x \mid u, \tau)}^{\lambda} \label{eq:S1}\\
-P_{L_{0}}(x \mid u, \tau) &\propto& {\delta_{\denote{u}(x, \tau)} P(x)}. \label{eq:L0}
+P_{S_{2}}(u \mid \lambda) & \propto &  \int_{\tau} P_{L_{1}}(\lambda , \tau \mid u) \label{eq:S2}\\
+P_{L_{1}}(\lambda , \tau \mid u) &\propto& P_{S_{1}}(u \mid \lambda, \tau) \cdot P(\lambda) \cdot P(\tau) \label{eq:L1}\\
+P_{S_{1}}(u \mid \lambda, \tau) &\propto&  {P_{L_{0}}(\lambda \mid u, \tau)}^{\alpha} \label{eq:S1}\\
+P_{L_{0}}(\lambda \mid u, \tau) &\propto& {\delta_{\denote{u}(\lambda, \tau)} P(\lambda)}. \label{eq:L0}
 \end{eqnarray}
-We take the pragmatic speaker $S_2$ to consider two utterances: the habitual, with $\denote{u}(x, \tau) := x>\tau$, or nothing (staying silent), with $\denote{u}(x, \tau) := \text{True}$.
+We take the pragmatic speaker $S_2$ to consider two utterances: the habitual, with $\denote{u}(\lambda, \tau) := \lambda>\tau$, or nothing (staying silent), with $\denote{u}(\lambda, \tau) := \text{True}$.
 Equation \ref{eq:S2} can then be interpreted as a model of felicity or truth judgments \cite{Degen2014, TesslerUnderReview}.
-The speaker will choose to produce the habitual when the true propensity $x$ is more likely under $L_1$'s posterior given the habitual than under her prior. 
+The speaker will choose to produce the habitual when the true propensity $\lambda$ is more likely under $L_1$'s posterior given the habitual than under her prior. 
 %Critically, speaker $S_{2}$ doesn't have a particular meaning of the habitual in mind (i.e. doesn't have access to the threshold $\tau$), but knows that $L_{1}$ will consider it, and integrates over the likely values she'll consider.
 This model is nearly identical with the model we have proposed for generic language \cite{TesslerUnderReview}, with the only difference being the underlying degree scale----\emph{propensity} of a behavior vs. \emph{prevalence} of a property. 
 
+The prior, $P(\lambda)$ in Eqs.~\ref{eq:L1} and \ref{eq:L0}, specifies prior beliefs about the propensity of a specific event or behavior (e.g.~\emph{smoking}) across different individuals.
+\emph{A priori}, it is unclear how far to extend this \emph{contrast class}: Does it include beliefs about \emph{all} people, or just individuals within a predefined subclass e.g. individuals of the same gender, individuals of the same age? 
+This is important because the meaning of the habitual (the threshold $\tau$) is derived with respect to the prior. 
+If the priors differed by gender (e.g., in the propensity to ``wear bras'') and if language interpreters took the prior to be with respect to a particular gender, the model would predict differences in the truth conditions by gender (e.g., in ``Susan wears a bra.'' vs. ``Bill wears a bra.''). 
+In Expts.~1\&2, we begin to address this issue.
+%\ndg{do we have to say something about contrast classes? maybe in model section?}
 %\ndg{since we don't use $L_1$ directly here, i'd stick $S_2$ onto the top of the above eqnarray and just start there...}
 %The pragmatic listener $L_1$ (Eq.~\ref{eq:L1}) is a model of interpreting habituals: Upon hearing a habitual, what frequency is a listener likely to infer?
 %
@@ -212,11 +218,9 @@ This model is nearly identical with the model we have proposed for generic langu
 %Experiment 1 set out to empirically verify the long-held belief that habitual sentences are analogous to generic sentences about events. 
 %We used an adapted version of the computational model presented by \citeA{TesslerUnderReview} to guide the experimental design.
 %
-The prior, $P(x)$ in Eqs.~\ref{eq:L1} and \ref{eq:L0}, specifies prior beliefs about the propensity of a specific event or behavior (e.g.~\emph{smoking}) across different people.
-\ndg{do we have to say something about contrast classes? maybe in model section?}
-Given that some individuals rarely or never engage in a behavior, while others do quite frequently, we would expect the prior to be a mixture distribution between (at least) these two possibilities, similar in spirit to Zero-inflated or Hurdle Models of epidemiological data \cite{hurdleModels}.
-Indeed, there may be more than these two possibilities, corresponding to individuals with different traits or demographics, for instance different expected frequencies depending on gender or age. 
-In this experiment we elicit the prior $P(x)$ for different events, so that we can generate model predictions for corresponding habituals.
+In this experiment we elicit the prior $P(\lambda)$ for different events, so that we can generate model predictions for corresponding habituals.
+Given that some individuals rarely or never engage in an event, while others do quite frequently, we would expect the prior to be a mixture distribution between (at least) these two possibilities, similar in spirit to Zero-inflated or Hurdle Models of epidemiological data \cite{hurdleModels}.
+Indeed, there may be more than these two possibilities, corresponding to individuals with different traits or demographics (e.g., different expected frequencies depending on gender or age). 
 
 \subsection{Method}
 
@@ -266,7 +270,7 @@ The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habit
 We built a Bayesian data analysis model for this prior elicitation task.
 Question 1 elicits the proportion of people who have done an action before. 
 We model this data as coming from a Beta distribution. 
-Question 2 elicits the relative frequency in the past that a person has done an action before.
+Question 2 elicits the relative frequency that a person does the action.
 This was modeled by a log-normal distribution. 
 Each item was modeled independently for each gender.
 %
@@ -285,13 +289,13 @@ The priors elicited cover a range of possible parameter values as intended (Figu
 We observe a correlation in our items between the mean \% of Americans who have \textsc{done action} before (Question 1) and the mean log-frequency  of action (Question 2) ($r_{1,2} = 0.74; r^2_{1,2} = 0.55$); our items that tend to be more popular actions also tend to be more frequent actions (e.g. \textsc{wears socks}) and visa-versa (e.g. \textsc{steals cars}), though there are notable exceptions (e.g. \textsc{plays the banjo} is not popular but done frequently when done at all, as is \textsc{smokes cigarettes}; \textsc{goes to the movies} is a popular activity though not done very often). 
 This diversity is relevant because the speaker model (Eq.~\ref{eq:S2}) will produce habitual sentences (e.g. \emph{Sam goes to the movies / goes to the ballet.}) contingent on the shape of the prior distribution. 
 
-From the inferred parameters and assumed functional forms, we get an inferred $P(x)$ modeled as a mixture of individuals with the possibility of carrying out the action and those without the possibility of doing it. 
-That is, $P(x)$ was constructed by sampling $x$ as follows:
+From the inferred parameters and assumed functional forms, we get an inferred $P(\lambda)$ modeled as a mixture of individuals with the possibility of carrying out the action and those without the possibility of doing it. 
+That is, $P(\lambda)$ was constructed by sampling $\lambda$ as follows:
 %That is, the posterior predictive of the prior data was constructed by forward-sampling the mixture component $\theta$ (determined by Q1: number of people who had done the action before, see Expt.~1 data analysis); if the sampled person was the kind of person to have done the action before, the frequency was sampled a likely frequency of action (determined by Q2); if they were not the type of person to have done the action, we assume they will never or only rarely do it. \ndg{never or rarely??}
 %\begin{minipage}{0.5 \textwidth} \small
 \begin{align}
 \theta & \sim \text{Beta}(\gamma_{1}, \xi_{1}) \nonumber \\ 
-\ln x & \sim \begin{cases}
+\ln \lambda & \sim \begin{cases}
 		\text{Gaussian}(\mu_{2}, \sigma_{2}) &\mbox{if } \text{Bernoulli}(\theta) = \textsc{t} \label{eq:priorModel}  \\
 				\delta_{x=-\infty} &\mbox{if } \text{Bernoulli}(\theta) = \textsc{f} \\
 		\end{cases}
@@ -301,10 +305,10 @@ In addition to specifying the correct way to combine our two prior-elicitation q
 and (2) it better captures the tails of the prior distribution which have relatively little data and need to be regularized by the analysis model.
 %, which receive such low probability to require many more participants in order to sample accurately.
 
-Some items show substantial differences between the genders (e.g. \emph{wears a bra}) and some show subtle differences (e.g. \emph{watches professional football}). 
-It is \emph{a priori} unclear whether or not $P(x)$ in Eqs.~\ref{eq:L1}, \ref{eq:L0} is the distribution over frequency of action with respect to \emph{all people}, or if it is restricted to be gender specific.
-For example, are the frequency conditions by which a man would qualify to ``wear a bra'' (habitually) different than those by which a woman would qualify to ``wear a bra''?
-We will explore this possibility in Experiment 2, for select items with priors that differ by gender.
+Some items show substantial differences between the genders (e.g. \textsc{wears a bra}) and some show subtle differences (e.g. \textsc{watches professional football}). 
+%It is \emph{a priori} unclear whether or not $P(x)$ in Eqs.~\ref{eq:L1}, \ref{eq:L0} is the distribution over frequency of action with respect to \emph{all people}, or if it is restricted to be gender specific.
+%For example, are the frequency conditions by which a man would qualify to ``wear a bra'' (habitually) different than those by which a woman would qualify to ``wear a bra''?
+We will explore the possibility of different truth conditions for habituals of different gendered characters in Experiment 2, for select items with priors that differ by gender.
 %In order to explore this possibility, we will select items with priors that differ by gender to explore more closely in Experiment 2.
 
 
@@ -317,9 +321,9 @@ We will explore this possibility in Experiment 2, for select items with priors t
 %\ndg{talk about gender differences?}
 
 \section{Experiment 2: Felicity judgments}
-
-We next explored the endorsements of habituals made from the items whose propensity priors were measured in Experiment 1. 
-\ndg{specifcy the grammar of the habitual constructions used more precisely (got / gets).. a singular noun (proper noun? person name?) combined with a present simple verb phrase??}
+A present-tense habitual sentence is of the form \textsc{singular noun phrase} $+$ \textsc{present tense simple verb phrase} (e.g. \emph{Bill smokes cigarettes.}).  
+We next explore the endorsements of habituals of this form made from the items whose propensity priors were measured in Experiment 1. 
+%\ndg{specifcy the grammar of the habitual constructions used more precisely (got / gets).. a singular noun (proper noun? person name?) combined with a present simple verb phrase??}
 
 \subsection{Method}
 
